# etl-athena-to-es-dynamodb

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  ecs_task_executor.py  pyproject.toml  requirements.txt
schemas/: es.txt
src/etl_athena_to_es_dynamodb/: athena_source.py  batch_processor.py  dynamodb_sink.py  exceptions.py  interfaces.py  main.py  models.py  opensearch_sink.py  pipeline.py  pipeline_factory.py  utils.py
tests/: test_dynamodb_schema.py  test_obj_to_dict.py
