[project]
name = "etl-athena-to-es-dynamodb"
version = "0.1.0"
description = "ETL pipeline: Athena -> OpenSearch + DynamoDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.26.0",
    "opensearch-py>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests-aws4auth>=1.3.1",
]

[project.scripts]
start_etl = "etl_athena_to_es_dynamodb.main:main"
